crates/biome_js_parser/tests/js_test_suite/error/jsx_shorthand_attribute_outside_astro.jsx
// `{prop}` is an Astro-only shorthand for `prop={prop}`. In a regular .jsx
// file (no Astro embedding) the parser must reject it.
const a = <div {prop} />;
const b = <Component {value} other="ok" />;
